--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.15.0",
     "styled": "^1.0.0",
     "styled-components": "^6.0.7"
   },
