--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "json-server": "^0.17.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
+    "react-file-reader": "^1.1.4",
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
     "styled": "^1.0.0",
