--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.2.0",
+    "babel-plugin-macros": "^3.1.0",
     "components": "^0.1.0",
     "json-server": "^0.17.3",
     "prop-types": "^15.8.1",
