--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-macros": "^3.1.0",
     "components": "^0.1.0",
     "json-server": "^0.17.3",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
