--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
+    "react-date-object": "^2.1.7",
     "react-dom": "^18.2.0",
     "react-file-reader": "^1.1.4",
     "react-hook-form": "^7.45.4",
