--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-file-reader": "^1.1.4",
     "react-hook-form": "^7.45.4",
+    "react-pdf": "^7.3.3",
     "react-router-dom": "^6.15.0",
     "styled": "^1.0.0",
     "styled-components": "^6.0.7",
